// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      Array [
        Object {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <RuleDescription
      isDefault={true}
      sections={
        Array [
          Object {
            "content": "how",
            "key": "how_to_fix",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      Array [
        Object {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <RuleDescription
      isDefault={true}
      sections={
        Array [
          Object {
            "content": "assess",
            "key": "assess_the_problem",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with comments or changelog element 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "content": <RuleDescription
            isDefault={true}
            sections={
              Array [
                Object {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;
